# Typester

./: Cargo.toml  types.d.ts
src/: lib.rs  main.rs  types.rs
